[gd_scene load_steps=12 format=3 uid="uid://dfwxijhx1v6cf"]

[ext_resource type="Texture2D" uid="uid://pxrs7fo5gd74" path="res://assets/sprites/UI/sprite_ui_clock.png" id="1_bntnj"]
[ext_resource type="Script" uid="uid://dvte26gfvunk1" path="res://scripts/systems/hud.gd" id="1_gjv2t"]
[ext_resource type="Texture2D" uid="uid://b8k6pg3i1pf1u" path="res://assets/sprites/UI/sprite_ui_clock_bar1.png" id="2_w4bxj"]
[ext_resource type="Texture2D" uid="uid://xqbhb0mxebi1" path="res://assets/sprites/UI/sprite_ui_clock_bar2.png" id="3_glxwr"]
[ext_resource type="FontFile" uid="uid://iuukjlpl6sf8" path="res://assets/fonts/TrueType (.ttf)/Kaph-Regular.ttf" id="4_glxwr"]
[ext_resource type="Texture2D" uid="uid://bjkwr3ijl61r" path="res://assets/sprites/UI/sprite_balloon_01_icon.png" id="5_japug"]
[ext_resource type="Texture2D" uid="uid://bqwbfeskt0oti" path="res://assets/sprites/UI/buttom/sprite_buttom_retry.png" id="6_sxgdg"]
[ext_resource type="Texture2D" uid="uid://biabvtjyp6yuw" path="res://assets/sprites/UI/buttom/sprite_buttom_backmenu.png" id="7_gjv2t"]

[sub_resource type="LabelSettings" id="LabelSettings_japug"]
font = ExtResource("4_glxwr")
font_size = 64
outline_size = 3
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_42fbr"]
font = ExtResource("4_glxwr")
font_size = 128
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sxgdg"]

[node name="HUD" type="CanvasLayer"]
layer = 0
script = ExtResource("1_gjv2t")

[node name="geral" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="clock" type="TextureRect" parent="geral"]
layout_mode = 0
offset_left = 40.0
offset_top = 40.0
offset_right = 110.0
offset_bottom = 112.0
texture = ExtResource("1_bntnj")

[node name="progress_bar" type="TextureProgressBar" parent="geral"]
layout_mode = 0
offset_left = 110.0
offset_top = 58.0
offset_right = 374.0
offset_bottom = 101.0
max_value = 60.0
step = 0.25
value = 60.0
texture_over = ExtResource("2_w4bxj")
texture_progress = ExtResource("3_glxwr")

[node name="lbl_score" type="Label" parent="geral"]
layout_mode = 0
offset_left = 586.0
offset_top = 40.0
offset_right = 638.0
offset_bottom = 114.0
text = "0"
label_settings = SubResource("LabelSettings_japug")
horizontal_alignment = 1
vertical_alignment = 1

[node name="texture" type="TextureRect" parent="geral"]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 638.0
offset_top = 37.0
offset_right = 713.0
offset_bottom = 112.0
texture = ExtResource("5_japug")

[node name="game_over" type="VBoxContainer" parent="geral"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -218.5
offset_top = -353.5
offset_right = 218.5
offset_bottom = 353.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25
alignment = 1

[node name="game_over" type="Label" parent="geral/game_over"]
layout_mode = 2
text = "Game
Over"
label_settings = SubResource("LabelSettings_42fbr")

[node name="restart_button" type="Button" parent="geral/game_over"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_sxgdg")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_sxgdg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_sxgdg")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_sxgdg")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_sxgdg")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_sxgdg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_sxgdg")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_sxgdg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_sxgdg")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_sxgdg")
theme_override_styles/normal = SubResource("StyleBoxEmpty_sxgdg")
icon = ExtResource("6_sxgdg")
flat = true
icon_alignment = 1

[node name="exit_button" type="Button" parent="geral/game_over"]
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_sxgdg")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_sxgdg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_sxgdg")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_sxgdg")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_sxgdg")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_sxgdg")
theme_override_styles/hover = SubResource("StyleBoxEmpty_sxgdg")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_sxgdg")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_sxgdg")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_sxgdg")
theme_override_styles/normal = SubResource("StyleBoxEmpty_sxgdg")
icon = ExtResource("7_gjv2t")
flat = true
icon_alignment = 1

[connection signal="pressed" from="geral/game_over/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="geral/game_over/exit_button" to="." method="_on_exit_button_pressed"]
